# zephyr_xmc

./: CMakeLists.txt  README.md  prj.common.conf  prj.debug.conf  prj.dhcp_client.conf  prj.gptp_sample.conf  prj.mqtt_publisher.conf  prj.mqtt_sn_publish.conf  prj.release.conf  prj.udp_server.conf
Paho_mqtt_sn/MQTTSNTransport/: MQTTSNTransportUDP.c  MQTTSNTransportUDP.h
boards/arm/umops_xmc45/: Kconfig.board  Kconfig.defconfig  board.cmake  umops_xmc45.dts  umops_xmc45.yaml  umops_xmc45_defconfig
boards/arm/umops_xmc47/: XMC4700.svd
drivers/zephyr/: CMakeLists.txt  Kconfig  module.yml
drivers/zephyr/clock_control/: CMakeLists.txt  Kconfig  clock_control_xmc.c
drivers/zephyr/counter/: CMakeLists.txt  Kconfig  counter_xmc.c
drivers/zephyr/ethernet/: CMakeLists.txt  ETH_RAM.ld  Kconfig  ethernet_xmc.c  ethernet_xmc.h
drivers/zephyr/gpio/: CMakeLists.txt  Kconfig  gpio_xmc.c
drivers/zephyr/led/: CMakeLists.txt  Kconfig
drivers/zephyr/mux/: CMakeLists.txt  Kconfig
drivers/zephyr/timer/: CMakeLists.txt  Kconfig  ccu4_0_timer_xmc.c
inc/: mqtt_publisher.h
misc/: sebin_diff_time.R
misc/help/: ubuntu_port.txt
misc/measurements/: results.txt
misc/measurements/BK_IV_TCP/: digital.csv
misc/python_measurement/data_set/: delta_B_00.csv  delta_F_00.csv  delta_MQTTSN-1_500_thread_mixed_1ms.csv  delta_MQTTSN-1_500_thread_pure.csv  delta_MQTTSN-1_500_thread_pure_1ms.csv  delta_MQTTSN-1_500_thread_pure_no_delay.csv  delta_MQTTSN-1_500_thread_pure_proper.csv  delta_MQTTSN_baseline_mixed_thread.csv  delta_MQTTSN_baseline_mixed_thread_schedlock.csv  delta_MQTTSN_baseline_pure.csv  delta_MQTTSN_baseline_pure_schedlock.csv  delta_MQTTSN_baseline_udp_thread.csv  delta_MQTTSN_baseline_udp_thread_schedlock.csv  delta_experiment.csv  delta_experiment_1.csv  delta_experiment_2.csv  (+47 more)
src/: dhcp_client.c  gptp_sample.c  main.c  mixed_mqtt_publisher_latency_measurement.c  mixed_mqtt_subscriber_latency_measurement.c  mqtt_publisher.c  mqtt_publisher_latency_measurement.c  mqtt_sn_publisher.c  mqtt_sn_publisher_latency_measurement.c  mqtt_sn_subscriber_latency_measurement.c  mqtt_sn_subscriber_publisher.c  mqtt_subscriber_latency_measurement.c  udp_client.c  udp_server.c
(+32 files in other folders)
